--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ v2/model_data/
 v2/models/
 
 v2/models/log/
+v2/log/pygta5-car-0\.001-alexnet-1-epochs\.model/events\.out\.tfevents\.1515517807\.DESKTOP-4A6N3AV
