--- a/.gitignore
+++ b/.gitignore
@@ -63,15 +63,11 @@ venv/
 
 *.npy
 
-v2/checkpoint
+checkpoint
 
-v2/model_data/
+model_data/
 
-v2/models/
-
-v2/models/log/
-v2/log/pygta5-car-0\.001-alexnet-1-epochs\.model/events\.out\.tfevents\.1515517807\.DESKTOP-4A6N3AV
-
-v2/Graph/
-
-*.h5
+Graph/
+v2/keras_models/
+v2/nvidianet/keras_models
+example.png
